# m32run

./: .gitignore  Cargo.toml  README.md
crates/abi/: Cargo.toml
crates/abi/src/: lib.rs
crates/guestmem/: Cargo.toml
crates/guestmem/src/: lib.rs
crates/host/: Cargo.toml
crates/host/src/: lib.rs
crates/loader/: Cargo.toml
crates/loader/src/: lib.rs
crates/m32run/: Cargo.toml
crates/m32run/src/: main.rs
crates/macho32/: Cargo.toml
crates/macho32/src/: lib.rs
crates/shim/: Cargo.toml
crates/shim/src/: lib.rs
crates/x86core/: Cargo.toml
crates/x86core/src/: cpu.rs  decode.rs  exec.rs  flags.rs  lib.rs  operand.rs
